--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,7 +8,7 @@ services:
         - DEV=true
     ports:
       - "8000:8000"
-    volumes:
-      - ./app:/app
+#    volumes:
+#      - ./app:/app
     command: > 
        sh -c "python manage.py runserver 0.0.0.0:8000"
