--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,11 +2,12 @@ version: "3"
 
 services:
   app:
+    user: $UID:$GID
     build:
       context: .
-      args:
-        - DEV=true
     ports:
       - "8000:8000"
-    command: > 
-       sh -c "python manage.py runserver 0.0.0.0:8000"
+    volumes:
+      - ./app:/app
+    command: >
+      sh -C "python manage.py runserver 0.0.0.0:8000"
