--- a/docker-composer-deploy.yml
+++ b/docker-composer-deploy.yml
@@ -21,7 +21,7 @@ services:
     image: postgres:13-alpine
     restart: always
     volumes:
-      - prostgres-data:/var/lib/postgresql/data
+      - postgres-data:/var/lib/postgresql/data
     environment:
       - POSTGRES_DB=&{DB_NAME}
       - POSTGRES_USER=&{DB_USER}
